# epd-home

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_image.yml
epd-home/: Cargo.toml
epd-home-cf/: .gitignore  Cargo.toml  package-lock.json  package.json
epd-home-cf/src/: lib.rs
epd-home-cli/: Cargo.toml
epd-home-cli/src/: main.rs
epd-home-web/: Cargo.toml
epd-home-web/src/: main.rs
epd-home/src/: lib.rs  screen.rs  transport.rs  weather.rs
epd-home/src/dither/: README.md  error.rs  img.rs  mod.rs  prelude.rs
epd-home/src/dither/color/: rgb.rs
epd-home/src/dither/color/palette/: cga.rs  crayon.rs  mod.rs
