[package]
name = "epd-home-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bmp-monochrome = "1.1.0"
env_logger = "0.11.3"
epd-home = { path = "../epd-home" }
image = { version = "0.25.1", default-features = false, features = ["qoi"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.59"
